@@ -1,3 +1,5 @@
+* Added -f option to muninn-strip.
+
 4.0 2017-03-31
 ~~~~~~~~~~~~~~
 
